# ecs_composex

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  INSTALL.md  LICENSE  MANIFEST.in  Makefile  NOTICES.rst  README.rst  SECURITY.rst  USAGE.rst  build_docs.yml  build_pr.yml  build_template.yml  buildspec.yml  buildspec_docs.yml  buildspec_pr.yml  buildspec_usecases.yml  cli.Dockerfile  codecov.yml  macro-install.yaml  macro.Dockerfile  pipeline.yml  pyproject.toml  requirements.txt  requirements_buildspec.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini  usecases_pipeline.yml
.cicd/: buildspec_docs.yml  buildspec_image.yml  buildspec_layer.yml  buildspec_layers.yml  buildspec_macro_image.yml  buildspec_manifest.yml  buildspec_pr.yml  codebuild_docker_release.yml  codebuild_docs.yml  codebuild_pr.yml  codebuild_release.yml  docker-compose.builds.yml  layer_template.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-improvements.md  feature_request.md
.github/workflows/: codeql-analysis.yml  pre-commit.yml
.install/: docker-macro.yaml  layer-macro-sar.yaml  layer-macro.yaml  python-macro.yaml
.scripts/: cleanup_placebo.sh  import_sam_policies_template.py
docs/: INGRESS_LOGIC.rst  Makefile  community_extensions.rst  compatibility_matrix.rst  composex_iam_policy.json  conf.py  create_own_extension.rst  credits.rst  examples.rst  extras.rst  features.rst  getstarted.rst  how_tos.rst  index.rst  installation.rst  lexicon.rst  macro_install.rst  macro_usage.rst  make.bat  modules_docs.rst  modules_syntax.rst  readme.rst  requisites.rst  story.rst  walkthrough.rst
docs/_static/: .gitignore  pygments.css
docs/_templates/: layout.html
docs/compatibility/: aws_ecs.rst  docker_compose.rst  docker_ecs_plugin.rst  iam_sam.rst
docs/examples/: change_rds_secret_env_names.rst  ecs_scheduled_tasks.rst  lab.rst  nginx_simple.rst
docs/features/: docdb.rst  dyndb.rst  ecs.rst  kinesis.rst  kms.rst  rds.rst  sqs.rst
docs/how_tos/: autoscaling_on_custom_alarm.rst  change_rds_secret_env_names.rst  deploy_service_to_public_subnets.rst  ecs_scheduled_tasks.rst  use_secrets_manager_for_services_secrets.rst
docs/readme_links/: acm.rst  appmesh.rst  common.rst  compute.rst  s3.rst  sns.rst  vpc.rst
docs/syntax/: acm.rst  appmesh.rst  compute.rst  dns.rst  sns.rst
docs/syntax_links/: acm.rst  appmesh.rst  common.rst  compute.rst  dyndb.rst  ecs.rst  elbv2.rst  kms.rst  rds.rst  s3.rst  sns.rst  sqs.rst  vpc.rst
e2e-examples/how_tos/: change_rds_secret_env_names.rst  ecs_scheduled_tasks.rst  use_secrets_manager_for_services_secrets.rst
e2e-examples/nginx_webapp/: Dockerfile  README.rst  aws-compose-x.yaml  docker-compose.override.yaml  docker-compose.yaml
ecs_composex/: COMMON_SYNTAX.rst  __init__.py  cli.py  ecs_composex.py  exceptions.py  ingress_settings.py  macro.py  mods_manager.py  network_ingress.py  rds_resources_settings.py  resource_permissions.py  resource_settings.py  resources_import.py  root.py  tcp_resources_settings.py
ecs_composex/acm/: SYNTAX.rst  __init__.py  acm_aws.py  acm_conditions.py  acm_ecs.py  acm_module.py  acm_params.py  acm_stack.py  acm_stack_helpers.py  cli.py
ecs_composex/alarms/: __init__.py  alarms_ecs.py  alarms_elbv2.py  alarms_helpers.py  alarms_module.py  alarms_params.py  alarms_stack.py  x-alarms.spec.json
ecs_composex/appmesh/: README.rst  SYNTAX.rst  __init__.py  appmesh_aws.py  appmesh_conditions.py  appmesh_mesh.py  appmesh_node.py  appmesh_params.py  appmesh_router.py  appmesh_service.py  appmesh_tools.py  x-appmesh.spec.json
ecs_composex/aps/: __init__.py  aps_module.py  aps_parameters.py  aps_perms.json  aps_stack.py  x-aps.spec.json
ecs_composex/cloudmap/: __init__.py  cloudmap_ecs.py  cloudmap_helpers.py  cloudmap_module.py  cloudmap_params.py  cloudmap_stack.py  cloudmap_x_resources.py
ecs_composex/cluster/: README.rst  __init__.py  cli.py  cluster_conditions.py  cluster_params.py  cluster_template.py  hosts_template.py  spot_fleet.py
ecs_composex/codeguru_profiler/: codeguru_profiler_aws.py  codeguru_profiler_ecs.py  codeguru_profiler_module.py  codeguru_profiler_params.py  codeguru_profiler_perms.json  codeguru_profiler_perms.py  codeguru_profiler_stack.py
ecs_composex/cognito_userpool/: __init__.py  cognito_aws.py  cognito_params.py  cognito_userpool_module.py  cognito_userpool_stack.py
ecs_composex/common/: SYNTAX.rst  __init__.py  aws.py  cfn_conditions.py  cfn_params.py  cfn_tools.py  compose_networks.py  compose_resources.py  compose_secrets.py  compose_services.py  compose_volumes.py  config.py  ecs_composex.py  envsubst.py  files.py  logging.py  outputs.py  services_helpers.py  settings.py  (+4 more)
examples/: services_with_queues.yml
features/: vpc.feature
features.live/: vpc_live.feature
outputs/: .gitignore
pytests/: test_acm.py  test_aws.py  test_cluster.py  test_common_aws.py  test_dns.py  test_dynamodb.py  test_envsubst.py  test_outputs.py  test_rds.py  test_rds_aws.py  test_scaling.py  test_secrets.py  test_settings.py  test_static_functions.py
tests/: README.rst  __init__.py  all_features.labels.yml  all_features.yml  all_modules.faulty.yml  all_modules.invalid.yml  all_modules.yml  app01.json  app01.yml  expected.config.json  rds_only.yml  serverless_features.yml  services_with_queues.yml  sqs.yml  tcp_madnessy.yml  test.params.json  test_common.py  test_compute.py  test_ecs.py  test_ecs_tools.py  test_iam.py  test_rds.py  test_s3.py  test_sns.py  test_sns.yml  test_sqs.py  test_yecs_composex.py
upgrade_scripts/: upgrade_to_0.18.py
use-cases/: all-in-one.yml  blog-all-features-with-compute.yml  blog-all-features.yml  blog-with-existing-vpc.yml  blog-with-mesh.yml  blog.families.network.yml  blog.families.x.yml  blog.families.yml  blog.features.x.yml  blog.features.yml  blog.with_mesh.yml  blog.yml  docker-images-dummy.yaml  warpstream.yaml  with_cloudmap.yml  yelb.yaml
vendor-wheels/: flatdict-4.0.1-py3-none-any.whl
(+871 files in other folders)
